<resources>
    <string name="device">Device</string>
    <string name="scenes">Scene</string>
    <string name="message">Message</string>
    <string name="center_person">Personal Center</string>
    <string name="center_setting">Set up</string>
    <string name="head">Head portrait</string>
    <string name="person_name">Name</string>
    <string name="person_sex">Gender</string>
    <string name="person_phone">Phone number</string>
    <string name="person_email">Mailbox</string>
    <string name="sys_update_pwd">Change Password</string>
    <string name="sys_account">Cancellation account</string>
    <string name="gateway_name">Gateway Name</string>
    <string name="room_name">Room Name</string>
    <string name="configure_gateway">Configure Gateway</string>
    <string name="configure_device">Configure Device</string>
    <string name="loading">Please wait…</string>
    <string name="chose_auto">Select the trigger type</string>
    <string name="physical_device">Physical device trigger</string>
    <string name="clicktrigger">Click on the trigger</string>
    <string name="timing_trigger">Timing trigger</string>
    <string name="automation_name">Automation name</string>
    <string name="select_device">Please select the trigger device</string>
    <string name="press">Press</string>
    <string name="please_select_trigger_time">Select the trigger time</string>
    <string name="select_timing_cycle">Select timing cycle</string>
    <string name="delete_condition">Are you sure to delete the condition?</string>
    <string name="test_scores">Test scores</string>
    <string name="add_auto">Add automation</string>
    <string name="scene_name">Scene Name</string>
    <string name="default_scenes">Default Scene</string>
    <string name="custom_scene">Custom</string>
    <string name="options">Options Scene</string>
    <string name="name">Name:</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="user_agreement">User Agreement</string>
    <string name="privacy_agree">Privacy Policy</string>
    <string name="server_intro">\t\t\t\t1. The confirmation and acceptance of the terms of service\nThe contents of this website and APP are owned by Cosa Connects BV. Users must carefully read the terms and conditions before accepting this service. Users using the service, or people that completed the registration process, accept all the terms of service.\n\n\t\t\t\t2. User’s agree:\n(1) Provide detailed and accurate personal information.\n(2) Continuously update the registration information and meet the requirements.\nIf the information provided by the user is inaccurate, this website has the right to end the service.\nThis website and APP will not disclose the users name, address, e-mail address, account number and phone number and other information (see privacy protection clause).\nUsers of this site and any behavior of APP must follow:\n(1) Transmission of data must comply with EU regulations.\n(2) The use of information services is not illegal and immoral acts.\n(3) Do not interfere with the network services.\n(4) Comply with all network protocols, rules, procedures and practices for the use of services. The user code of conduct is based on Internet regulations, policies, procedures and practices.\n\n\t\t\t\t3. Modify the terms of service\nThis website and APP have the right to amend the terms if necessary that will be published on the page.\nIf you do not accept the changes, the user can take the initiative to cancel their membership. If you do not cancel your membership, iyou agree to every change in the terms of service.\n\n\t\t\t\t4. The user account number, password and security\nOnce successfully registered as a member, you will have a password and user name.</string>
    <string name="login_protocol">Please carefully read and fully understand the terms of "user agreement" and "privacy policy", including but not limited to: in order to provide you with instant messaging, intelligent device data push and other services, we need to collect your device information, operation log and other information. Please read the 《user agreement》 and 《privacy policy》 for details. If you agree, please click "agree" to start using our service.</string>
    <string name="login_protocol_1">《user agreement》</string>
    <string name="login_protocol_3">《privacy policy》</string>
    <string name="login_protocol_2">By creating an account, you agree to《user agreement》and《privacy policy》</string>
    <string name="manage">Manage</string>
    <string name="custom">Custom Switch</string>
    <string name="change_scene">You can click the yellow area button to switch to a preset scene.</string>
    <string name="current_scene">Current Scene</string>
    <string name="purpose_scene">Switch Scene</string>
    <string name="network_hz">This device only supports 2.4GHZ frequency router.</string>
    <string name="email_code_success_hint">The verification code has been sent to your email. Please wait patiently for a delay.</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="password">Password</string>
    <string name="record">Record</string>
    <string name="volume_show">Adjust the volume from small to large, and then from large to small \nThe specific volume shall be subject to the volume actually heard</string>
    <string name="explain">Explain:</string>
    <string name="common_functions">Common functions:</string>
    <string name="temperature">Temperature(℃)</string>
    <string name="humidity">Humidity(%)</string>
    <string name="setting_temperature">Setting(℃)</string>
    <string name="current_temperature">Current</string>
    <string name="scene_edit">Edit</string>
    <string name="without_scene">No scenes, please add gateway first.</string>
    <string name="input_scene_name">Please enter a scene name</string>
    <string name="no_automation">No automation</string>
    <string name="check_to_automate">Enable to automate</string>
    <string name="trigger_condition">Trigger condition</string>
    <string name="executive_action">Executive action</string>
    <string name="set_action">Set Action</string>
    <string name="temperature_triggering_mode">Please select the temperature triggering mode</string>
    <string name="humidity_triggering_mode">Please select humidity triggering mode</string>
    <string name="set_criteria">Set criteria</string>
    <string name="account">Account</string>
    <string name="rename">Rename</string>
    <string name="modify_phone">Modify Phone</string>
    <string name="modify_email">Modify Mailbox</string>
    <string name="full_notice_push">Full notice push alert</string>
    <string name="account_cancellation">Account Cancellation</string>
    <string name="permanently_discontinued">Permanently discontinued</string>
    <string name="cancelled">\t\t\t\tIf you sign in again before, your deactivation request will be cancelled</string>
    <string name="account_follows">We will delete all information in your account as follows:</string>
    <string name="device_information">All your device information</string>
    <string name="message_logs">All your message logs</string>
    <string name="account_information">All your account information</string>
    <string name="personal_information">All your personal information</string>
    <string name="feedback">All your feedback</string>
    <string name="confirm_to_cancel">Confirm to cancel the account?</string>
    <string name="installed">Installed</string>
    <string name="not_installed">Not installed</string>
    <string name="comprehensive_score">Your smart home comprehensive score:</string>
    <string name="points">points</string>
    <string name="room_management">Room Management</string>
    <string name="delete_the_room">It is not allowed to delete the room if there is equipment in the room</string>
    <string name="room_setting">Room Setting</string>
    <string name="recommend">Recommend</string>
    <string name="living_room">living room</string>
    <string name="bedroom">Bedroom</string>
    <string name="kitchen">Kitchen</string>
    <string name="study">Study</string>
    <string name="devices">devices</string>
    <string name="uploaded_avatar">Successfully uploaded the Avatar!</string>
    <string name="gateway_online">gateway online</string>
    <string name="cant_add_conditions">No other conditions can be added at present</string>
    <string name="perform_action">Click the button to perform the action</string>
    <string name="push_message">When trigger conditions are met \nMobile will receive push message</string>
    <string name="official_website">Official Website</string>
    <string name="contact_us">Contact Us</string>
    <string name="version_update">Version Update</string>
    <string name="contact_information">Contact:</string>
    <string name="agreed_agreement">Reviewed and agreed to the agreement</string>
    <string name="exit_agreement">If you cancel the agreement,\nyou will not be able to continue to use the app.</string>
    <string name="add_sharer">Add Sharer</string>
</resources>
