<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50">

            <TextView
                style="@style/TabTitleTextView"
                android:text="@string/room_setting"/>

            <ImageView
                android:id="@+id/iv_room_back"
                style="@style/TabBackImageView"/>

            <TextView
                android:id="@+id/tv_save_room"
                style="@style/TabDoTextView"
                android:text="@string/save"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1"
            android:background="@color/top_bar_line" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none"
            android:background="@color/main_ground">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
    
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_48"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/margin_15"
                    android:orientation="horizontal"
                    android:background="@color/white">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_15"
                        android:ems="6"
                        android:textSize="@dimen/text_16"
                        android:textColor="@color/text_title"
                        android:text="@string/room_name"/>
                    <EditText
                        android:id="@+id/et_room_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/text_title"
                        android:textSize="@dimen/text_16"
                        android:maxLength="15"
                        android:gravity="center_vertical"
                        android:layout_marginStart="@dimen/margin_15"
                        android:layout_marginEnd="@dimen/margin_10"
                        android:hint="@string/ali_rename_room_name"
                        android:background="@null"/>
                </LinearLayout>
    
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_24"
                    android:layout_marginStart="@dimen/margin_15"
                    android:textSize="@dimen/text_12"
                    android:textColor="@color/text_line"
                    android:text="@string/recommend"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/margin_15">
                    <TextView
                        android:id="@+id/tv_room_name1"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/margin_32"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginStart="@dimen/margin_15"
                        android:textColor="@color/text_title"
                        android:textSize="@dimen/text_14"
                        android:text="@string/living_room"
                        android:background="@drawable/dialog_round_bg"/>
                    <TextView
                        android:id="@+id/tv_room_name2"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/margin_32"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginStart="@dimen/margin_15"
                        android:textColor="@color/text_title"
                        android:textSize="@dimen/text_14"
                        android:text="@string/bedroom"
                        android:background="@drawable/dialog_round_bg"/>
                    <TextView
                        android:id="@+id/tv_room_name3"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/margin_32"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginStart="@dimen/margin_15"
                        android:textColor="@color/text_title"
                        android:textSize="@dimen/text_14"
                        android:text="@string/kitchen"
                        android:background="@drawable/dialog_round_bg"/>
                    <TextView
                        android:id="@+id/tv_room_name4"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/margin_32"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginStart="@dimen/margin_15"
                        android:layout_marginEnd="@dimen/margin_15"
                        android:textColor="@color/text_title"
                        android:textSize="@dimen/text_14"
                        android:text="@string/study"
                        android:background="@drawable/dialog_round_bg"/>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/bt_delete_room"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_40"
                        android:textColor="@color/main_color"
                        android:textSize="@dimen/text_16"
                        android:text="@string/delete"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/btn_empty_bg"/>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>