<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50">
            <TextView
                style="@style/TabTitleTextView"
                android:text="@string/user_agreement"/>
            <ImageView
                android:id="@+id/iv_default_back"
                style="@style/TabBackImageView"/>

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1"
            android:background="@color/top_bar_line" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none"
            android:background="@color/main_ground">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_15">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_14"
                    android:textColor="@color/text_title"
                    android:text="@string/server_intro"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/margin_32"
                    android:layout_marginBottom="@dimen/margin_32"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cb_agree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:layout_marginStart="@dimen/margin_05"
                        android:background="@drawable/checkbox_bg"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_12"
                        android:textSize="@dimen/text_12"
                        android:textColor="@color/text_line"
                        android:text="@string/agreed_agreement"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>