<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_50"
    android:layout_marginBottom="@dimen/margin_50"
    android:background="@drawable/dialog_round_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_20"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/margin_3"
                android:layout_height="@dimen/margin_15"
                android:layout_marginStart="@dimen/margin_20"
                android:background="@drawable/round_vertical_bg"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margin_10"
                android:textSize="@dimen/text_18"
                android:textColor="@color/main_color"
                android:textStyle="bold"
                android:text="@string/dialog_title_alert"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1"/>

        <TextView
            android:id="@+id/tv_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_20"
            android:textSize="@dimen/text_16"
            android:text="@string/login_protocol"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50"
            android:gravity="end|center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_dialog_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_16"
                android:textColor="@color/device_off"
                android:textStyle="bold"
                android:layout_marginRight="@dimen/margin_20"
                android:text="@string/disagree"/>
            <TextView
                android:id="@+id/tv_dialog_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_30"
                android:layout_marginStart="@dimen/margin_20"
                android:textSize="@dimen/text_16"
                android:textColor="@color/main_color"
                android:textStyle="bold"
                android:text="@string/agree"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>