<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50">
            <TextView
                style="@style/TabTitleTextView"
                android:text="@string/center_person"/>
            <ImageView
                android:id="@+id/iv_personal_back"
                style="@style/TabBackImageView"/>
            <TextView
                android:id="@+id/tv_save_personal"
                style="@style/TabDoTextView"
                android:text="@string/save"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1"
            android:background="@color/top_bar_line" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_ground"
            android:fillViewport="true"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:layout_marginTop="@dimen/margin_15"
                    android:background="@color/white"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/margin_15"
                        android:ems="6"
                        android:textSize="@dimen/text_16"
                        android:textColor="@color/text_title"
                        android:text="@string/head"/>
                    <ImageView
                        android:id="@+id/user_img"
                        android:layout_width="@dimen/margin_48"
                        android:layout_height="@dimen/margin_48"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/margin_137"
                        android:src="@mipmap/head_default"/>

                    <ImageView
                        android:id="@+id/iv_user_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/margin_20"
                        android:src="@mipmap/arrow_right"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_1"
                    android:background="@color/line_bg"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:background="@color/white"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/margin_15"
                        android:ems="6"
                        android:textSize="@dimen/text_16"
                        android:textColor="@color/text_title"
                        android:text="@string/person_name"/>
                    <EditText
                        android:id="@+id/user_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/margin_137"
                        android:layout_marginEnd="@dimen/margin_20"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/text_16"
                        android:textColor="@color/text_title"
                        android:hint="@string/rename"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_1"
                    android:background="@color/line_bg"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:background="@color/white"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/margin_15"
                        android:ems="6"
                        android:textSize="@dimen/text_16"
                        android:textColor="@color/text_title"
                        android:text="@string/account"/>
                    <TextView
                        android:id="@+id/user_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/margin_137"
                        android:textSize="@dimen/text_16"
                        android:textColor="@color/text_title"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:layout_marginTop="@dimen/margin_15"
                    android:background="@color/white"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/margin_15"
                        android:ems="6"
                        android:textSize="@dimen/text_16"
                        android:textColor="@color/text_title"
                        android:text="@string/person_phone"/>
                    <EditText
                        android:id="@+id/user_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/margin_137"
                        android:layout_marginEnd="@dimen/margin_50"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/text_16"
                        android:textColor="@color/text_title"
                        android:hint="@string/phone_hint"/>
                    <ImageView
                        android:id="@+id/user_update_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/margin_20"
                        android:src="@mipmap/arrow_right"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_1"
                    android:background="@color/line_bg"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:background="@color/white"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/margin_15"
                        android:ems="6"
                        android:textSize="@dimen/text_16"
                        android:textColor="@color/text_title"
                        android:text="@string/person_email"/>
                    <EditText
                        android:id="@+id/user_mail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/margin_137"
                        android:layout_marginEnd="@dimen/margin_50"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/text_16"
                        android:textColor="@color/text_title"
                        android:hint="@string/please_input_email"/>
                    <ImageView
                        android:id="@+id/user_update_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/margin_20"
                        android:src="@mipmap/arrow_right"/>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>